--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ body {
 .description_word_proyect,
 .fecha_word_proyect,
 .stack_tecnolgy_word,
-.staks_list{
+.staks_list {
   font-size: medium;
   font-weight: bold;
 }
@@ -298,4 +298,21 @@ img:hover {
   display: flex;
   justify-content: center;
   gap: 1em;
+}
+
+@media (max-height: 940px) {
+  .container_general {
+    width: 90%;
+    height: 150vh;
+  }
+
+  .proyecto_container {
+    font-size: x-small;
+  }
+  .description_word_proyect,
+  .fecha_word_proyect,
+  .stack_tecnolgy_word,
+  .staks_list {
+    font-size: small;
+  }
 }
